--- a/Chat_Server/Chat_Server.vcxproj
+++ b/Chat_Server/Chat_Server.vcxproj
@@ -5,10 +5,6 @@
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="Release|x64">
-      <Configuration>Release</Configuration>
-      <Platform>x64</Platform>
-    </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FB5DD001-6713-49F7-F007-43CE5CBC3FFB}</ProjectGuid>
@@ -24,19 +20,10 @@
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
-  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -47,18 +34,12 @@
     <TargetName>Chat_Server</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\bin\Release-windows-x86_64\Chat_Server\</OutDir>
-    <IntDir>..\bin-int\Release-windows-x86_64\Chat_Server\</IntDir>
-    <TargetName>Chat_Server</TargetName>
-    <TargetExt>.exe</TargetExt>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
+      <PreprocessorDefinitions>TWONET_DEBUG;TWONET_ASSERT_ENABLED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>src;..\Authenticator\vendor\TwoNet\include;..\Authenticator\vendor\SPDLOG\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -73,41 +54,33 @@
       <AdditionalLibraryDirectories>..\Authenticator\vendor\TwoNet\lib\Debug-windows-x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>src;..\Authenticator\vendor\TwoNet\include;..\Authenticator\vendor\SPDLOG\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <LanguageStandard>stdcpp17</LanguageStandard>
-      <ExternalWarningLevel>Level3</ExternalWarningLevel>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>TwoNet.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Authenticator\vendor\TwoNet\lib\Release-windows-x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Link>
-  </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Client\Client.h" />
+    <ClInclude Include="src\Commands\GetMessages\GetMessagesCommand.h" />
+    <ClInclude Include="src\Commands\GetRooms\GetRoomsCommand.h" />
+    <ClInclude Include="src\Commands\ICommand.h" />
+    <ClInclude Include="src\Commands\JoinRoom\JoinRoomCommand.h" />
+    <ClInclude Include="src\Commands\LeaveRoom\LeaveRoomCommand.h" />
+    <ClInclude Include="src\Commands\SendChat\SendChatCommand.h" />
     <ClInclude Include="src\Debug\Assertion.h" />
     <ClInclude Include="src\Debug\Log.h" />
-    <ClInclude Include="src\Server\Commands\Commands.h" />
-    <ClInclude Include="src\Server\NetworkServer.h" />
-    <ClInclude Include="src\Server\Rooms\Room.h" />
-    <ClInclude Include="src\Server\Rooms\RoomManager.h" />
+    <ClInclude Include="src\Networking\Client\Client.h" />
+    <ClInclude Include="src\Networking\Response\ServerResponse.h" />
+    <ClInclude Include="src\Networking\ServerManager\ServerManager.h" />
+    <ClInclude Include="src\Rooms\Room.h" />
+    <ClInclude Include="src\Rooms\RoomManager.h" />
     <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Client\Client.cpp" />
+    <ClCompile Include="src\Commands\GetMessages\GetMessagesCommand.cpp" />
+    <ClCompile Include="src\Commands\GetRooms\GetRoomsCommand.cpp" />
+    <ClCompile Include="src\Commands\JoinRoom\JoinRoomCommand.cpp" />
+    <ClCompile Include="src\Commands\LeaveRoom\LeaveRoomCommand.cpp" />
+    <ClCompile Include="src\Commands\SendChat\SendChatCommand.cpp" />
     <ClCompile Include="src\Debug\Log.cpp" />
     <ClCompile Include="src\Main.cpp" />
-    <ClCompile Include="src\Server\Commands\Commands.cpp" />
-    <ClCompile Include="src\Server\NetworkServer.cpp" />
-    <ClCompile Include="src\Server\Rooms\Room.cpp" />
-    <ClCompile Include="src\Server\Rooms\RoomManager.cpp" />
+    <ClCompile Include="src\Networking\ServerManager\ServerManager.cpp" />
+    <ClCompile Include="src\Rooms\Room.cpp" />
+    <ClCompile Include="src\Rooms\RoomManager.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
