--- a/Chat_Server/Chat_Server.vcxproj.filters
+++ b/Chat_Server/Chat_Server.vcxproj.filters
@@ -25,8 +25,8 @@
     <Filter Include="Networking">
       <UniqueIdentifier>{6D615D47-5919-9F94-C220-78F0AEF73985}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Networking\Client">
-      <UniqueIdentifier>{DB54860C-476B-84A2-90E2-0FC4FC37552A}</UniqueIdentifier>
+    <Filter Include="Networking\DatabaseAPI">
+      <UniqueIdentifier>{6B3CFBA9-5736-24FC-40A3-BA0C2C3C8A68}</UniqueIdentifier>
     </Filter>
     <Filter Include="Networking\Response">
       <UniqueIdentifier>{6BED8D1C-D74E-6B2A-60BC-B1DCCC1CA2E9}</UniqueIdentifier>
@@ -63,8 +63,8 @@
     <ClInclude Include="src\Debug\Log.h">
       <Filter>Debug</Filter>
     </ClInclude>
-    <ClInclude Include="src\Networking\Client\Client.h">
-      <Filter>Networking\Client</Filter>
+    <ClInclude Include="src\Networking\DatabaseAPI\DatabaseClient.h">
+      <Filter>Networking\DatabaseAPI</Filter>
     </ClInclude>
     <ClInclude Include="src\Networking\Response\ServerResponse.h">
       <Filter>Networking\Response</Filter>
@@ -79,6 +79,8 @@
       <Filter>Rooms</Filter>
     </ClInclude>
     <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\Commands\AuthenticateUser\AuthenticateUserCommand.h" />
+    <ClInclude Include="src\Commands\RegisterClient\RegisterClientCommand.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Commands\GetMessages\GetMessagesCommand.cpp">
@@ -100,6 +102,9 @@
       <Filter>Debug</Filter>
     </ClCompile>
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\Networking\DatabaseAPI\DatabaseClient.cpp">
+      <Filter>Networking\DatabaseAPI</Filter>
+    </ClCompile>
     <ClCompile Include="src\Networking\ServerManager\ServerManager.cpp">
       <Filter>Networking\ServerManager</Filter>
     </ClCompile>
@@ -110,5 +115,7 @@
       <Filter>Rooms</Filter>
     </ClCompile>
     <ClCompile Include="src\pch.cpp" />
+    <ClCompile Include="src\Commands\AuthenticateUser\AuthenticateUserCommand.cpp" />
+    <ClCompile Include="src\Commands\RegisterClient\RegisterClientCommand.cpp" />
   </ItemGroup>
 </Project>
