--- a/Chat_Client/Chat_Client.vcxproj.filters
+++ b/Chat_Client/Chat_Client.vcxproj.filters
@@ -1,69 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Debug">
-      <UniqueIdentifier>{0C95060D-78A9-2EBE-412B-D21DADFE2AEF}</UniqueIdentifier>
+    <Filter Include="Authenticator">
+      <UniqueIdentifier>{80698D5C-EC29-0993-B564-521021E44D6F}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Networking">
-      <UniqueIdentifier>{6D615D47-5919-9F94-C220-78F0AEF73985}</UniqueIdentifier>
+    <Filter Include="Authenticator\vendor">
+      <UniqueIdentifier>{DD4FBB79-C9DE-4443-72FD-583E5E6B55E9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="StateMachine">
-      <UniqueIdentifier>{BB54AC3C-A7B7-3BE1-503D-74973C7F0764}</UniqueIdentifier>
+    <Filter Include="Authenticator\vendor\ProtoBuff">
+      <UniqueIdentifier>{83DAACAD-6F00-7714-5846-FCDF440B9CE0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="StateMachine\States">
-      <UniqueIdentifier>{1EEE13DD-8A4F-F1EA-13BD-379D7F1D28AA}</UniqueIdentifier>
+    <Filter Include="Authenticator\vendor\ProtoBuff\Protos_Build">
+      <UniqueIdentifier>{A84F583A-14B5-EBC0-9D8D-8D9909F2E02F}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Authenticator\vendor\ProtoBuff\Protos_Build\Authenticate">
+      <UniqueIdentifier>{16FAF377-02CF-3B2B-2B7E-7B2717B24942}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Authenticator\vendor\ProtoBuff\Protos_Build\AuthenticateResponse">
+      <UniqueIdentifier>{45923A64-3193-CEDE-5A5B-3B6346BB4499}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccount">
+      <UniqueIdentifier>{1869C7B6-84DB-09D3-CD6F-3F573921D4CB}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccountResponse">
+      <UniqueIdentifier>{47E305A4-B301-1A71-FCCE-1F83682C557A}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{2DAB880B-99B4-887C-2230-9F7C8E38947C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Debug">
+      <UniqueIdentifier>{63A3C3B2-CF0D-7829-184C-29CF84F5557E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Networking">
+      <UniqueIdentifier>{24FE637E-10CC-5784-F95F-C8AAE5CC33E9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\StateMachine">
+      <UniqueIdentifier>{32FBCC4F-1EF4-EBA1-4726-D126337ECBAD}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\StateMachine\States">
+      <UniqueIdentifier>{B5C8D7AE-2100-2046-2A0A-846996C0463F}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\Authenticate\Authenticate.pb.h">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\Authenticate</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\AuthenticateResponse\AuthenticateResponse.pb.h">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\AuthenticateResponse</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccount\CreateAccount.pb.h">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccount</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccountResponse\CreateAccountResponse.pb.h">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccountResponse</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debug\Assertion.h">
-      <Filter>Debug</Filter>
+      <Filter>src\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\Debug\Log.h">
-      <Filter>Debug</Filter>
+      <Filter>src\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\Networking\Networking.h">
-      <Filter>Networking</Filter>
+      <Filter>src\Networking</Filter>
     </ClInclude>
     <ClInclude Include="src\Networking\Request.h">
-      <Filter>Networking</Filter>
+      <Filter>src\Networking</Filter>
     </ClInclude>
     <ClInclude Include="src\StateMachine\State.h">
-      <Filter>StateMachine</Filter>
+      <Filter>src\StateMachine</Filter>
     </ClInclude>
     <ClInclude Include="src\StateMachine\StateManager.h">
-      <Filter>StateMachine</Filter>
+      <Filter>src\StateMachine</Filter>
     </ClInclude>
     <ClInclude Include="src\StateMachine\States\ConnectingState.h">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClInclude>
     <ClInclude Include="src\StateMachine\States\LobbyState.h">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClInclude>
     <ClInclude Include="src\StateMachine\States\RoomState.h">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClInclude>
-    <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\pch.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Debug\Log.cpp">
-      <Filter>Debug</Filter>
+    <ClCompile Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\Authenticate\Authenticate.pb.cc">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\Authenticate</Filter>
     </ClCompile>
-    <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\AuthenticateResponse\AuthenticateResponse.pb.cc">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\AuthenticateResponse</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccount\CreateAccount.pb.cc">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccount</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccountResponse\CreateAccountResponse.pb.cc">
+      <Filter>Authenticator\vendor\ProtoBuff\Protos_Build\CreateAccountResponse</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debug\Log.cpp">
+      <Filter>src\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="src\Networking\Networking.cpp">
-      <Filter>Networking</Filter>
+      <Filter>src\Networking</Filter>
     </ClCompile>
     <ClCompile Include="src\StateMachine\StateManager.cpp">
-      <Filter>StateMachine</Filter>
+      <Filter>src\StateMachine</Filter>
     </ClCompile>
     <ClCompile Include="src\StateMachine\States\ConnectingState.cpp">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClCompile>
     <ClCompile Include="src\StateMachine\States\LobbyState.cpp">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClCompile>
     <ClCompile Include="src\StateMachine\States\RoomState.cpp">
-      <Filter>StateMachine\States</Filter>
+      <Filter>src\StateMachine\States</Filter>
     </ClCompile>
-    <ClCompile Include="src\pch.cpp" />
+    <ClCompile Include="src\pch.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
